--- a/.env
+++ b/.env
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=us-cdbr-east-04.cleardb.com
 DB_PORT=3308
-DB_DATABASE=webservice_trabalho
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=heroku_225d43979f3aa94
+DB_USERNAME=b5f282d6d04d36
+DB_PASSWORD=6665bb05
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
